crates/jarl-cli/tests/integration/snapshots/integration__toml__default_exclude_works-2.snap
---
source: crates/jarl-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
cpp11.R [1:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
cpp11.R [2:0] any_duplicated `any(duplicated(...))` is inefficient. Use `anyDuplicated(...) > 0` instead.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
