crates/jarl-cli/tests/integration/snapshots/integration__toml__default_exclude_works.snap
---
source: crates/jarl-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
Warning: No R files found under the given path(s).

----- stderr -----

----- args -----
check .
