crates/jarl-cli/tests/integration/snapshots/integration__toml__empty_ignore_array-2.snap
---
source: crates/jarl-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Unknown rules in field `ignore` in 'jarl.toml': "" (empty or whitespace-only not allowed)

----- args -----
check .
